Update Options.java